--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,5 @@
-about-time==3.1.1
-alive-progress==2.4.1
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-beaupy==3.4.0
-cffi==1.15.1
-commonmark==0.9.1
-emoji==2.2.0
-GCMlib==1.0.2.post1
-grapheme==0.6.0
-pycparser==2.21
-pycryptodome==3.17.0
-Pygments==2.14.0
-pystyle==2.9
-python-yakh==0.3.1
-rich==12.6.0
+alive-progress
+beaupy
+GCMlib
+pycryptodome
+pystyle
